candy-shop/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: candy-shop
  namespace: default
  labels:
    name: candy-shop
spec:
  containers:
    - image: christianksoh/candy-shop
      name: candy-shop
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
