candy-shop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candy-shop-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: candy-shop
